force-app/main/default/objects/Opsi_Jadwal__c/Opsi_Jadwal__c.object-meta.xml
<CustomObject>
    <description>menyimpan informasi jadwal shift agent</description>
    <label>Master Shift Karyawan</label>
    <nameField>
        <label>Jadwal Shift</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Shift Karyawan</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>