force-app/main/default/objects/Opsi_Jadwal__c/fields/Kode__c.field-meta.xml
<CustomField>
    <fullName>Kode__c</fullName>
    <externalId>true</externalId>
    <label>Kode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>