force-app/main/default/objects/Opsi_Jadwal__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <label>Login</label>
    <type>Time</type>
</CustomField>