force-app/main/default/objects/Opsi_Jadwal__c/fields/Logout__c.field-meta.xml
<CustomField>
    <fullName>Logout__c</fullName>
    <label>Logout</label>
    <type>Time</type>
</CustomField>