force-app/main/default/objects/Opsi_Jadwal__c/fields/Mulai_Istirahat__c.field-meta.xml
<CustomField>
    <fullName>Mulai_Istirahat__c</fullName>
    <label>Mulai Istirahat</label>
    <type>Time</type>
</CustomField>