force-app/main/default/objects/Opsi_Jadwal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Kode__c</columns>
    <columns>Login__c</columns>
    <columns>Logout__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>